--- a/frontend/src/assets/css/components/productList.scss
+++ b/frontend/src/assets/css/components/productList.scss
@@ -5,6 +5,8 @@
   margin-right: -15px;
 
   &__item {
+    display: flex;
+    flex-direction: column;
     width: calc(25% - 30px);
     margin: 15px;
   }
