--- a/frontend/src/assets/css/modules/config.scss
+++ b/frontend/src/assets/css/modules/config.scss
@@ -42,9 +42,14 @@ button {
 }
 
 .container {
-	max-width: 1150px;
+	max-width: 1280px;
 	margin: 0 auto;
 	padding: 0 20px;
+}
+
+svg,
+path {
+	transition: fill .2s ease, stroke .2s ease;
 }
 
 .fade-enter-active,
