--- a/backend/back_store/blog/templates/blog/index.html
+++ b/backend/back_store/blog/templates/blog/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
 
-</body>
-</html>
+{% block title %}Главная{% endblock %}
+
+
+{% block content %}
+    <h2>А это из index.html</h2>
+
+
+{% endblock %}
