--- a/frontend/src/assets/css/modules/config.scss
+++ b/frontend/src/assets/css/modules/config.scss
@@ -33,6 +33,10 @@ a {
 
 button {
 	cursor: pointer;
+
+	&:disabled {
+		cursor: default;
+	}
 }
 
 .wrapper {
@@ -54,14 +58,4 @@ button {
 svg,
 path {
 	transition: fill .2s ease, stroke .2s ease;
-}
-
-.fade-enter-active,
-.fade-leave-active {
-	transition: opacity 0.2s ease;
-}
-
-.fade-enter-from,
-.fade-leave-to {
-	opacity: 0;
 }
