--- a/backend/back_store/static/css/custom_style.css
+++ b/backend/back_store/static/css/custom_style.css
@@ -2,3 +2,12 @@
     border-color: #1A01CC;
     margin-left: 100px;
 }
+
+.main_background_color{
+    background-color: #0A0A0A;
+}
+
+.columns_color{
+    background-color: #222222;
+}
+
