--- a/backend/back_store/templates/base.html
+++ b/backend/back_store/templates/base.html
@@ -9,24 +9,22 @@
 </head>
 
 <body>
-    <div class="container-sm bg-dark  text-white">
-        <div class="row row-cols-2">
-            <div class="col-lg-4 bg-gradient mx-3 mt-3 ">
-                <div class="block">
-                    Column
+    <div class="container-fluid main_background_color  text-white">
+         <div class="row">
+            <div class="col-4 columns_color mx-3 mt-3">
+                {% include 'includes/left.html' %}
+            </div>
+            <div class="col  me-3 mt-3 ">
+                <div class="row">
+                    {% include 'includes/navbar.html' %}
                 </div>
-
-            </div>
-            <div class="col-lg-7 bg-gradient mx-2 mt-3">
-                {% block content %}
-
-                {% endblock %}
-            </div>
-        </div>
+                <div class="row mt-3">
+                    {% block right %}{% endblock %}
+                </div>
+         </div>
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </body>
 </html>
